--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
     <head>
         <meta charset="utf-8">
         <title>UML par la pratique</title>
+
+        <!-- Bootstrap integration-->
+        <link
+            href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+        >
+       <!--  my custo css integration--> 
+        <link
+            href="./assets/styles.css"
+            rel="stylesheet"
+        >
+
+        <!-- icons -->
+        <link
+            href="./assets/style.css"
+            rel="stylesheet"
+        >
+
     </head>
 
     <body>
-        <main myApp>
-        </main>
+        <!-- Main container for my app -->
+        <div class="container">
+            <main class="row"myApp>
+            </main>
         <script src="./build/bundle.js"></script>
     </body>
 </html>
