--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         <div class="container">
             <main class="row"myApp>
             </main>
+            
+            <div class="click">
+            Clique moi stp!
+            <ndiv>    
+        </div>     
         <script src="./build/bundle.js"></script>
     </body>
 </html>
