--- a/jquery.html
+++ b/jquery.html
@@ -10,11 +10,7 @@
             href ="./assets/styles.css"
             rel="stylesheet"
         >
-
-
-
     </head>
-
     <body>
         <heard>
             <h1></h1>
@@ -29,7 +25,7 @@
                 </span>
 
                 <!-- La valeur elle-meme -->
-                <span classe="valeur">0</span>
+                <span class="value">0</span>
 
                 <!-- Pour incrimenter la valeur -->
                 <span class="up">
@@ -37,7 +33,7 @@
                 </span>
             </div>
             <!-- Fin du decor -->
-            
+
             <div class = "company">
                 <h2>Aélion</h2>
                 <address>
@@ -98,13 +94,47 @@
                         $(this).removeClass('selected');
                         $(this).children('ul').hide();
                     }
-                    
-                    //dans tous les cas... on enleve la class selected..
-                    //$(this).scss('background-color', 'lightblue');
-                    //$(this).css('background-color', ''); 
+                }
+            );
 
-                }//call back fct in native js for "ev" = qui quoi quel 
+            //Challenge #1 detecter un click sur le bouton + de l'interface: complete
+            //Challenge #2 recuperer la valeur du span.value: complete
+            //Challenge #3 Ajouter 1 a la valeur courance du span value : complete
+            //Challenge #4 Remplacer le contenu de span.value par la nouvelle valeur
+
+            $('.up').on(
+                "click", function(event){
+                    console.info("Click sur + détecté!");
+                    //objet qui contient la valeur a incrementer
+                    const value = $('.value');
+                    console.log('Valeur courante de span class==value:' + value.html());
+
+                    //Ajouter 1 a la valeur courante
+                    let nextValue = parseInt(value.html());
+                    nextValue = nextValue +1;
+                    console.log('Apres incrementation la valeur devient :' + nextValue);
+
+                    //Remplacer la nouvelle valeur sur le html
+                    value.html(nextValue);
+                }
+            );
+            $('.down').on(
+                "click", function(event){
+                    console.info("Click sur + détecté!");
+                    //objet qui contient la valeur a incrementer
+                    const value = $('.value');
+                    console.log('Valeur courante de span class==value:' + value.html());
+
+                    //Ajouter 1 a la valeur courante
+                    let nextValue = parseInt(value.html());
+                    nextValue = nextValue -1;
+                    console.log('Apres incrementation la valeur devient :' + nextValue);
+
+                    //Remplacer la nouvelle valeur sur le html
+                    value.html(nextValue);
+                }
             );
         </script>
     </body>
 </html>
+
