--- a/jquery.html
+++ b/jquery.html
@@ -111,7 +111,12 @@
 
                     //#3 Ajouter 1 a la valeur courante
                     let nextValue = parseInt(value.html());
-                    nextValue = nextValue +1;
+                    if(nextValue < 10){
+                        nextValue = nextValue +1;
+
+                    } else {
+                        nextValue = 10
+                    }
                     console.log('Apres incrementation la valeur devient :' + nextValue);
 
                     //#4 Remplacer la nouvelle valeur sur le html
@@ -130,10 +135,10 @@
                     if(nextValue > 0 ){
                         nextValue = nextValue -1;
                     } else {
-                        nextValue = 0
+                        nextValue =0
                     }
                     console.log('Apres incrementation la valeur devient :' + nextValue);
-
+                    
                     //#4 Remplacer la nouvelle valeur sur le html
                     value.html(nextValue);
                 }
