--- a/component.html
+++ b/component.html
@@ -6,7 +6,6 @@
         <title>Mon composant</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href ="./assets/styles.css" rel="stylesheet">
-        <script src="scripts.ts"></script>
 
     </head>
 
@@ -19,13 +18,17 @@
             <button class="btn-outline-button" type="button" id="button-decrease">-</button>
         </div>
         
-        <!--Zone de saissie -->
-            <input type="text" class="form-control" placeholder="0" aria-label="Example text with button addon" aria-describedby="button-addon1">
+        <!--Zone de saissie : attribut data-max custom-->
+            <input type="text" class="form-control" placeholder="Veuillez saisir une quantité" value='1' data-max='10' readonly>
         
         <!-- Bouton apres la zone de saisi-->
         <div class="input-group-append">
             <button class="btn-outline-button" type="button" id="button-increase">+</button>
         </div>
+
+        <!-- Integration des ressources javascript// On le met a la fin pour assurer que la page ce charge lineairmenet sans bug --> 
+        <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="./assets/my-counter.js"></script>
     </body>
 </html>
 
