--- a/component.html
+++ b/component.html
@@ -19,7 +19,14 @@
         </div>
         
         <!--Zone de saissie : attribut data-max custom-->
-            <input type="text" class="form-control" placeholder="Veuillez saisir une quantité" value='1' data-max='10' readonly>
+            <input type="text" 
+                   class="form-control" 
+                   placeholder="Veuillez saisir une quantité" 
+                   value='1' 
+                   data-max='10' 
+                   id='quantity' 
+                   readonly
+            >
         
         <!-- Bouton apres la zone de saisi-->
         <div class="input-group-append">
