--- a/component.html
+++ b/component.html
@@ -23,7 +23,8 @@
                    class="form-control" 
                    placeholder="Veuillez saisir une quantité" 
                    value='1' 
-                   data-max='10' 
+                   data-max='10'
+                   data-min='1'
                    id='quantity' 
                    readonly
             >
