implemented new message banner without button

--- a/component.html
+++ b/component.html
@@ -33,14 +33,12 @@
             <div class="input-group-append">
                 <button class="btn-outline-button" type="button" id="button-increase">+</button>
             </div>
+            
+            <!-- Popup message-->
         </div>
-
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <div class="alert alert-danger" role="alert">
             <strong>Holy guacamole!</strong> <span class='message'></span>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;
-            </span>
-            </button>
+            </div>
         </div>
     
         <!-- Integration des ressources javascript// On le met a la fin pour assurer que la page ce charge lineairmenet sans bug --> 
