--- a/component.html
+++ b/component.html
@@ -11,23 +11,13 @@
 
     <body>
         <!-- Set maximum number-->
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <button type="button" class="btn btn-outline-secondary">Action</button>
-                <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="sr-only">Toggle Dropdown</span>
-                </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <div role="separator" class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
-                </div>
-            </div>
-            <input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
+        <div class="input-group">
+        <div class="input-group-prepend">
+            <span class="input-group-text" id="">Set Maximum</span>
         </div>
-        
+        <input type="number" class="form-control" value= 10 min=1>
+        </div>
+         <p> 
         <!-- Composant counter : Presentation -->
         <div class="input-group mb-3">
         
@@ -41,7 +31,7 @@
                     class="form-control" 
                     placeholder="Veuillez saisir une quantité" 
                     value='1' 
-                    data-max='10'
+                    data-max= '10'
                     data-min='1'
                     id='quantity' 
                     readonly
